src/tests/snapshots/learn_chumsky__tests__expr__unary_expressions-2.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
-1.0
---

Some(
    Spanned(
        Unary(
            Neg,
            Spanned(
                Float(1, 0),
                1..4,
            ),
        ),
        0..4,
    ),
)

--- Errors ---
[]
---
