src/tests/snapshots/learn_chumsky__tests__expr__unary_expressions-5.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
!true
---

Some(
    Spanned(
        Unary(
            Not,
            Spanned(
                Ident("true"),
                1..5,
            ),
        ),
        0..5,
    ),
)

--- Errors ---
[]
---
