src/tests/snapshots/learn_chumsky__tests__expr__unary_expressions-9.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
!lhs == rhs
---

Some(
    Spanned(
        Binary(
            Spanned(
                Unary(
                    Not,
                    Spanned(
                        Ident("lhs"),
                        1..4,
                    ),
                ),
                0..4,
            ),
            Eq,
            Spanned(
                Ident("rhs"),
                8..11,
            ),
        ),
        0..11,
    ),
)

--- Errors ---
[]
---
