src/tests/snapshots/learn_chumsky__tests__expr__unary_expressions.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
-255
---

Some(
    Spanned(
        Unary(
            Neg,
            Spanned(
                Int(255),
                1..4,
            ),
        ),
        0..4,
    ),
)

--- Errors ---
[]
---
